# sikarra

./: .gitignore  .pre-commit-config.yaml  .taplo.toml  Cargo.toml  Makefile.toml  README.md  rustfmt.toml
config/: arbitrage.json  bot.json
crates/adapters/: Cargo.toml
crates/adapters/examples/: read_slot.rs
crates/adapters/src/: lib.rs
crates/adapters/src/coinbase/: callback.rs  mod.rs  models.rs  wsclient.rs
crates/adapters/src/uniswap_v4/: mod.rs  models.rs  state.rs
crates/arbitrager/: Cargo.toml
crates/arbitrager/src/: action.rs  config.rs  engine.rs  event.rs  main.rs  models.rs  price_feed.rs  runner.rs
crates/arbitrager/src/collectors/: mod.rs  pool.rs  ticker.rs
crates/arbitrager/src/engine/: mod.rs
crates/arbitrager/src/strategy/: logging.rs  mod.rs  simple.rs
crates/bindings/: Cargo.toml
crates/bindings/abis/: StateView.json
crates/bindings/src/: lib.rs
crates/bot/: Cargo.toml
crates/bot/src/: config.rs  main.rs  runner.rs
crates/bot/src/collectors/: ticker.rs
crates/bot/src/engine/: mod.rs  models.rs  pool.rs  price_feed.rs
crates/bot/src/strategy/: logging.rs  market_making.rs  mod.rs
crates/core/: Cargo.toml
crates/core/src/: backoff.rs  engine.rs  error.rs  lib.rs  runner.rs  runtime.rs  utils.rs
crates/wsclient/: Cargo.toml
crates/wsclient/src/: callback.rs  client.rs  consumer.rs  lib.rs
make/: lint.toml
