[package]
name              = "sikkara-adapters"
version.workspace = true
edition.workspace = true

[dependencies]
# Sikkara Dependencies
sikkara-core.workspace     = true
sikkara-wsclient.workspace = true

rust_decimal.workspace        = true
serde.workspace               = true
serde_json.workspace          = true
tokio-tungstenite.workspace   = true
jiff.workspace                = true
tracing.workspace             = true
tokio.workspace               = true
rust_decimal_macros.workspace = true
async-trait.workspace         = true
alloy.workspace               = true
futures.workspace             = true
fastnum.workspace             = true
