[package]
name              = "sikkara-arbitrager"
version.workspace = true
edition.workspace = true

[dependencies]
sikkara-core.workspace        = true
sikkara-wsclient.workspace    = true
sikkara-adapters.workspace    = true
async-trait.workspace         = true
tokio.workspace               = true
tokio-util.workspace          = true
rust_decimal.workspace        = true
rust_decimal_macros.workspace = true
tracing.workspace             = true
serde.workspace               = true
serde_json.workspace          = true
tokio-stream.workspace        = true
jiff.workspace                = true
futures.workspace             = true
