[package]
name              = "sikkara-core"
version.workspace = true
edition.workspace = true

[dependencies]
async-trait.workspace  = true
futures.workspace      = true
tokio.workspace        = true
futures-util.workspace = true
thiserror.workspace    = true
tokio-util.workspace   = true

tracing-subscriber.workspace = true
tracing.workspace            = true
anyhow.workspace             = true
