[package]
name              = "sikkara-wsclient"
version.workspace = true
edition.workspace = true

[dependencies]
sikkara-core.workspace      = true
tokio.workspace             = true
tokio-util.workspace        = true
tokio-tungstenite.workspace = true
async-trait.workspace       = true
tracing.workspace           = true
jiff.workspace              = true
futures-util.workspace      = true
